--- a/public/config/config.json
+++ b/public/config/config.json
@@ -7,10 +7,10 @@
     "ID": 137
   },
   "NFT_NAME": "Nerdy Coder Clones",
-  "SYMBOL": "NCC",
+  "SYMBOL": "ST",
   "MAX_SUPPLY": 1000,
   "WEI_COST": 75000000000000000,
-  "DISPLAY_COST": 0.075,
+  "DISPLAY_COST": 0.05,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/savetreesnft",
