--- a/public/config/config.json
+++ b/public/config/config.json
@@ -7,7 +7,7 @@
     "ID": 1
   },
   "NFT_NAME": "Save Trees NFT",
-  "SYMBOL": "SaveTreesNFT",
+  "SYMBOL": "NFT",
   "MAX_SUPPLY": 1000,
   "WEI_COST": 75000000000000000,
   "DISPLAY_COST": 0.05,
