--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NCC",
-  "name": "Coder Clone NFT",
+  "short_name": "ST",
+  "name": "SaveTreesNFT",
   "icons": [
     {
       "src": "favicon.ico",
